changed the ui added the content

--- a/index.html
+++ b/index.html
@@ -47,13 +47,6 @@
           <div class="dropdown">
             <button class="dropdown-btn">Cloud ▼</button>
           </div>
-          <button
-            class="dropdown-btn save-pdf-btn"
-            id="savePdfBtn"
-            title="Save as PDF"
-          >
-            Save as PDF
-          </button>
           <button class="search-btn" aria-label="Search">
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
               <circle
@@ -182,9 +175,15 @@
       </aside>
     </div>
 
+    <!-- Back to Top Button -->
+    <button
+      id="backToTop"
+      aria-label="Back to top"
+      title="Back to top"
+    ></button>
+
     <script src="data.js"></script>
-    <!-- html2pdf for client-side PDF generation -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
+
     <script src="script.js"></script>
   </body>
 </html>
